# bmn_magnetic_field

./: CMakeLists.txt  README.md
macro/: calibration.cc  draw_2dgraph.cc  draw_field.cc  fit_parameters.cc  read_old_field.cc
python/: data_parser.py  draw.py  field_plane.py  field_point.py  progress_bar.py
src/: FieldLinkDef.h  data_parser.cc  data_parser.h  data_set.cc  data_set.h  field_plane.cc  field_plane.h  field_point.cc  field_point.h  main.cc  visualizer.cc  visualizer.h
